# LightboxEngine

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
Engine/src/: GlobalAccess.cpp  GlobalAccess.h  MessageSystem.cpp  MessageSystem.h  main.cpp
Engine/src/Core/: AssetManager.h  AssetManager.h.autosave  GlobalGameObjectManager.cpp  GlobalGameObjectManager.h
Engine/src/FrameWork/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Mesh.h  MeshComponent.h  Scene.cpp  Scene.h  Shader.h  Texture2D.cpp  Texture2D.h
Engine/src/Math/: Vector2f.cpp  Vector2f.h  Vector2i.cpp  Vector2i.h  Vector3f.cpp  Vector3f.h  Vector3i.cpp  Vector3i.h
Engine/src/RenderDevice/: RenderDevice.cpp  RenderDevice.h  RenderDeviceWindow.cpp  RenderDeviceWindow.h
Engine/src/RenderDevice/None/: None_RenderDevice.cpp  None_RenderDevice.h  None_RenderDeviceWindow.cpp  None_RenderDeviceWindow.h
Engine/src/RenderDevice/OpenGL/: OpenGL_RenderDevice.cpp  OpenGL_RenderDeviceWindow.cpp  OpenGL_RenderDeviceWindow.h
Engine/src/RenderDevice/OpenGL3/: OpenGL3_RenderDevice.cpp  OpenGL3_RenderDevice.h  OpenGL3_RenderDeviceWindow.cpp  OpenGL3_RenderDeviceWindow.h
Engine/src/Renderer/: BaseRenderer.cpp  BaseRenderer.h  Canvas2DRenderObj.cpp  Canvas2DRenderObj.h  MeshRenderObj.cpp  MeshRenderObj.h
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
Libraries/glfw/: CMakeLists.txt
Libraries/glfw/examples/: heightmap.c
